contact 수정 / 이미지 용량 줄임

--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -16,7 +16,6 @@
     crossorigin="anonymous">
     <link rel="shortcut icon" href="img/favicon.ico">
     <script type="text/javascript" src="http://dapi.kakao.com/v2/maps/sdk.js?appkey=653072818d0b69f14dba3e57f1835677"></script>
-    <script data-cfasync="false" src="js/form-submission-handler.js"></script>
 </head>
 <body>
     <div class="wrap">
@@ -223,7 +222,7 @@
                                         <li>- 원페이지로 제작하여 접근성을 높이고, 교육 프로그램에 대한 상세 정보를 위한 서브 페이지 제작 </li>
                                     </ul>
                                     <div class="pop_img">
-                                        <img src="img/zetton.png" alt="제튼_홈페이지">
+                                        <img src="img/zetton.jpg" alt="제튼_홈페이지">
                                     </div>
                                 </div>
                             </div>        
@@ -231,7 +230,7 @@
                     </div>
                     <div class="content tab02" onclick="pop_open(this);">
                         <div class="item">
-                            <img class="item_img" src="img/pf_web01.png" alt="제튼">
+                            <img class="item_img" src="img/pf_web01.jpg" alt="제튼">
                             <div class="item_cover">
                                 <div class="item_txt">
                                     <h4>Zetton</h4>
@@ -275,10 +274,10 @@
                                         <li>- 모바일명함 디자인 및 웹뷰를 위한 코드화 (flexbox 레이아웃 적용)</li>
                                     </ul>
                                     <div class="pop_img_mo clearfix">
-                                        <img src="img/shift01.png" alt="모바일명함_SHIFT01">
-                                        <img src="img/shift02.png" alt="모바일명함_SHIFT02">
-                                        <img src="img/shift03.png" alt="모바일명함_SHIFT03">
-                                        <img src="img/shift04.png" alt="모바일명함_SHIFT04">
+                                        <img src="img/shift01.jpg" alt="모바일명함_SHIFT01">
+                                        <img src="img/shift02.jpg" alt="모바일명함_SHIFT02">
+                                        <img src="img/shift03.jpg" alt="모바일명함_SHIFT03">
+                                        <img src="img/shift04.jpg" alt="모바일명함_SHIFT04">
                                     </div>
                                 </div>
                             </div>        
@@ -286,7 +285,7 @@
                     </div>
                     <div class="content tab02" onclick="pop_open(this);">
                         <div class="item">
-                            <img class="item_img" src="img/pf_mob01.png" alt="모바일명함_SHIFT_App ">
+                            <img class="item_img" src="img/pf_mob01.jpg" alt="모바일명함_SHIFT_App ">
                             <div class="item_cover">
                                 <div class="item_txt">
                                     <h4>모바일명함 SHIFT</h4>
@@ -331,7 +330,7 @@
                                         <li>- flexbox 레이아웃 적용</li>
                                     </ul>
                                     <div class="pop_img">
-                                        <img src="img/shift.png" alt="시프트앱_홈페이지">
+                                        <img src="img/shift.jpg" alt="시프트앱_홈페이지">
                                     </div>
                                 </div>
                             </div>        
@@ -339,7 +338,7 @@
                     </div>
                     <div class="content tab02" onclick="pop_open(this);">
                         <div class="item">
-                            <img class="item_img" src="img/pf_web02.png" alt="SHIFT_Web페이지">
+                            <img class="item_img" src="img/pf_web02.jpg" alt="SHIFT_Web페이지">
                             <div class="item_cover">
                                 <div class="item_txt">
                                     <h4>SHIFT Web</h4>
@@ -383,7 +382,7 @@
                                         <li>- flexbox 레이아웃 적용</li>
                                     </ul>
                                     <div class="pop_img">
-                                        <img src="img/jeje.png" alt="제제컴즈_홈페이지">
+                                        <img src="img/jeje.jpg" alt="제제컴즈_홈페이지">
                                     </div>
                                 </div>
                             </div>        
@@ -391,7 +390,7 @@
                     </div>
                     <div class="content tab02" onclick="pop_open(this);">
                         <div class="item">
-                            <img class="item_img" src="img/pf_web03.png" alt="(주)제제컴즈_Web페이지">
+                            <img class="item_img" src="img/pf_web03.jpg" alt="(주)제제컴즈_Web페이지">
                             <div class="item_cover">
                                 <div class="item_txt">
                                     <h4>JEJECoMMS Co.</h4>
@@ -435,7 +434,7 @@
                                         <li>- 클라이언트의 요구와 타겟층의 연령대를 고려한 단순하고 직관적인 UI </li>
                                     </ul>
                                     <div class="pop_img">
-                                        <img src="img/one_real.png" alt="원공인중개사_홈페이지">
+                                        <img src="img/one_real.jpg" alt="원공인중개사_홈페이지">
                                     </div>
                                 </div>
                             </div>        
@@ -443,7 +442,7 @@
                     </div>
                     <div class="content tab02" onclick="pop_open(this);">
                         <div class="item">
-                            <img class="item_img" src="img/pf_web04.png" alt="원공인중개사_Web페이지">
+                            <img class="item_img" src="img/pf_web04.jpg" alt="원공인중개사_Web페이지">
                             <div class="item_cover">
                                 <div class="item_txt">
                                     <h4>One-real estimate</h4>
@@ -487,7 +486,7 @@
                                         <li>- 웹 표준 준수한 반응형 페이지</li>
                                     </ul>
                                     <div class="pop_img">
-                                        <img src="img/megabox.png" alt="메가박스_홈페이지">
+                                        <img src="img/megabox.jpg" alt="메가박스_홈페이지">
                                     </div>
                                 </div>
                             </div>        
@@ -495,7 +494,7 @@
                     </div>
                     <div class="content tab03" onclick="pop_open(this);">
                         <div class="item">
-                            <img class="item_img" src="img/pf_web05.png" alt="메가박스_Web페이지">
+                            <img class="item_img" src="img/pf_web05.jpg" alt="메가박스_Web페이지">
                             <div class="item_cover">
                                 <div class="item_txt">
                                     <h4>MegaBox</h4>
@@ -538,7 +537,7 @@
                                         <li>- 가비아 카피페이지</li>
                                     </ul>
                                     <div class="pop_img">
-                                        <img src="img/gabia.png" alt="가비아_홈페이지">
+                                        <img src="img/gabia.jpg" alt="가비아_홈페이지">
                                     </div>
                                 </div>
                             </div>        
@@ -546,7 +545,7 @@
                     </div>
                     <div class="content tab03" onclick="pop_open(this);">
                         <div class="item">
-                            <img class="item_img" src="img/pf_web06.png" alt="가비아_Web페이지">
+                            <img class="item_img" src="img/pf_web06.jpg" alt="가비아_Web페이지">
                             <div class="item_cover">
                                 <div class="item_txt">
                                     <h4>Gabia</h4>
@@ -590,7 +589,7 @@
                                         <li>- 원페이지로 제작하여 접근성을 높이고, 팝업 페이지를 통해 포트폴리오에 대한 상세 정보 제공</li>
                                     </ul>
                                     <div class="pop_img">
-                                        <img src="img/personal.png" alt="가비아_홈페이지">
+                                        <img src="img/personal.jpg" alt="포트폴리오_박준형">
                                     </div>
                                 </div>
                             </div>        
@@ -598,7 +597,7 @@
                     </div>
                     <div class="content tab03" onclick="pop_open(this);">
                         <div class="item">
-                            <img class="item_img" src="img/pf_web07.png" alt="이미지">
+                            <img class="item_img" src="img/pf_web07.jpg" alt="이미지">
                             <div class="item_cover">
                                 <div class="item_txt">
                                     <h4>Portfolio</h4>
@@ -661,7 +660,7 @@
                                 <td>Email .<span class="info_detail">junhp1994@gmail.com</span></td>
                             </tr>
                     </table>
-                    <form class="gform" method="POST" data-email="junhp1994@gmail.com" action="https://script.google.com/macros/s/AKfycbz2Gva0TtJFMYUX5DkqLcbhdvU19pAbK1GNKP3s/exec">
+                    <!-- <form class="gform" method="POST" data-email="junhp1994@gmail.com" action="https://script.google.com/macros/s/AKfycbz2Gva0TtJFMYUX5DkqLcbhdvU19pAbK1GNKP3s/exec">
                         <fieldset>
                             <div class="form_contact">
                                 <label class="sr-only">Keep this field blank</label>
@@ -683,7 +682,7 @@
                             </div>
                         </fieldset>
             
-                        <div class="thankyou_message" style="">
+                        <div style="display: none" class="thankyou_message">
                             <div class="msg_popup_wrap">
                                 <div class="msg_popup">
                                     <h1>Thank You!</h1>
@@ -692,7 +691,29 @@
                                 </div> 
                             </div>
                         </div>
-                        </form>
+
+                        <script data-cfasync="false" src="js/form-submission-handler.js"></script>
+                        </form> -->
+                        <form id="fs-frm" name="simple-contact-form" accept-charset="utf-8" action="https://formspree.io/junhp1994@gmail.com" method="post">
+                            <fieldset id="fs-frm-inputs">
+                            <div class="form_contact">  
+                            <div class="field_box">    
+                              <input type="text" name="name" id="full-name" class="field" placeholder="Name" required="">
+                            </div>
+                            <div class="field_box">
+                              <input type="text" name="phone" id="full-name" class="field" placeholder="Phone" required="">
+                            </div>
+                            <div class="field_box">
+                              <input type="email" name="_replyto" id="email-address" class="field" placeholder="Email" required="">
+                            </div>
+                            <div class="field_box">
+                              <textarea rows="5" name="message" id="message" class="field field_txt" placeholder="Comment" required=""></textarea>
+                            </div>
+                              <input type="hidden" name="_subject" id="email-subject" value="Contact Form Submission">
+                              <input class="send" type="submit" value="Submit">
+                            </div>
+                            </fieldset>
+                          </form>
                 </div>
             </div>
          </section>
